syntax = "proto3";

package streaming.v1;

service StreamingService {
  // Original: GetStreamStatus
  rpc Status(StatusRequest) returns (StatusResponse);
  // Original: ToggleStream
  rpc Toggle(ToggleRequest) returns (ToggleResponse);
  // Original: StartStream
  rpc Start(StartRequest) returns (StartResponse);
  // Original: StopStream
  rpc Stop(StopRequest) returns (StopResponse);
  // Original: SendStreamCaptions
  rpc SendCaptions(SendCaptionsRequest) returns (SendCaptionsResponse);
  // Original: GetStreamBitrateSetting
  rpc Bitrate(BitrateRequest) returns (BitrateResponse);
  // Original: SetStreamBitrateSetting
  rpc SetBitrate(SetBitrateRequest) returns (SetBitrateResponse);
  // Gets the current stream service settings (stream destination).
  //
  // Original: GetStreamServiceSettings
  rpc Settings(SettingsRequest) returns (SettingsResponse);
  // Sets the current stream service settings (stream destination).
  //
  // Note: Simple RTMP settings can be set with type `rtmp_custom` and the
  // settings fields `server` and `key`.
  //
  // Original: SetStreamServiceSettings
  rpc SetSettings(SetSettingsRequest) returns (SetSettingsResponse);
}

message StatusRequest {}

message StatusResponse {}

message ToggleRequest {}

message ToggleResponse {}

message StartRequest {}

message StartResponse {}

message StopRequest {}

message StopResponse {}

message SendCaptionsRequest {
  string captions = 1;
}

message SendCaptionsResponse {}

message BitrateRequest {}

message BitrateResponse {
  uint32 bitrate = 1;
}

message SetBitrateRequest {
  uint32 bitrate = 1;
}

message SetBitrateResponse {}

message SettingsRequest {}

message SettingsResponse {}

message SetSettingsRequest {}

message SetSettingsResponse {}

message Settings {
  // Stream service type, like `rtmp_custom` or `rtmp_common`.
  string type = 1;
  // Stream service settings.
  string settings = 2;
}
